# pythainer

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  default.nix  flake.nix  lock.x86_64-linux.json  pyproject.toml  requirements.txt
.github/workflows/: codefmt.yml  tests.yml
.nix/: default.nix  lock.x86_64-linux.json
doc/joss25/: build.py  paper.bib  paper.md
examples/: example_builder.py  intel_vtune.py  llvm_container.py  partials.py  quickstart.py  scala_container.py
examples/copy/: collision_container.py  copies_container.py  copy_container.py  relative_container.py
scripts/: all_checks.sh  install_venv.sh  list_missing_copyright.sh
src/: ex.py
src/pythainer/: __init__.py  cli.py  sysutils.py
src/pythainer/builders/: __init__.py  cmds.py  contexts.py  utils.py
src/pythainer/builders/commands/: __init__.py
src/pythainer/builders/commands/run/: mounts.py
src/pythainer/examples/builders/: __init__.py
src/pythainer/examples/installs/: __init__.py
src/pythainer/examples/runners/: __init__.py
src/pythainer/runners/: __init__.py
tests/: conftest.py  llvm_container.py  qemu_container.py
tests/golden/: scaffold.py
tests/integration/: test_alpine_smoke.py
tests/unit/: test_cli.py  test_render_dockerfile.py
